<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_developer"
        android:textSize="24sp"
        android:fontFamily="sans-serif-condensed"
        android:id="@+id/secret_dev"
        android:onClick="devClick"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sayan_tapadar"
        android:textSize="18sp"
        android:fontFamily="sans-serif-condensed"
        android:id="@+id/decret_dev_name"
        android:onClick="devClick"/>
    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/designer"
        android:textSize="24sp"
        android:fontFamily="sans-serif-condensed"
        android:id="@+id/secret_des"
        android:onClick="desClick"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anirban_datta_gupta"
        android:textSize="18sp"
        android:fontFamily="sans-serif-condensed"
        android:id="@+id/secret_des_name"
        android:onClick="desClick"/>
    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/founder"
        android:textSize="24sp"
        android:fontFamily="sans-serif-condensed"
        android:id="@+id/secret_fou"
        android:onClick="fouClick"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shounak_mukherjee"
        android:textSize="18sp"
        android:fontFamily="sans-serif-condensed"
        android:id="@+id/secret_fou_name"
        android:onClick="fouClick"/>
</LinearLayout>