<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_coordinator"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context="in.cubeat.cubeat.SearchActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_collapseMode="pin">

        <android.support.v7.widget.FitWindowsFrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/howrah"
                android:contentDescription="@string/search_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/black_transparent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textColorHint="@android:color/white"
                    app:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/search_keyword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/keyword"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:imeOptions="actionSearch"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center_vertical"
                    android:paddingBottom="8dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/from_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:textColorHint="@android:color/white"
                        app:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/search_from"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/from"
                            android:textColor="@android:color/white"
                            android:textColorHint="@android:color/white" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_toEndOf="@+id/from_container"
                        android:layout_toRightOf="@+id/from_container"
                        android:textColorHint="@android:color/white"
                        app:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/search_to"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/to"
                            android:textColor="@android:color/white"
                            android:textColorHint="@android:color/white" />
                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:id="@+id/search_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:src="@drawable/ic_search_white_24dp"
                        android:contentDescription="@string/search_icon" />
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.FitWindowsFrameLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.FitWindowsFrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/post_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/recycler_view_background"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <ImageView
            android:id="@+id/search_fail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/search_gif"
            android:alpha="0.4"
            android:visibility="gone"
            android:contentDescription="@string/search_fail_pic" />
    </android.support.v7.widget.FitWindowsFrameLayout>

</android.support.design.widget.CoordinatorLayout>
