<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:foregroundGravity="center"
    tools:context="in.cubeat.cubeat.AboutUsActivity"
    android:id="@+id/about_coordinator">

    <android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_about_us"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">



            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/logo_small_about"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/about_logo"
                android:contentDescription="@string/image_logo_string" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/about_logo"
            android:layout_toEndOf="@+id/about_logo"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/connect_with_us_on_social_media"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/about_connect_text"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/about_logo"
            android:layout_toEndOf="@+id/about_logo"
            android:layout_below="@+id/about_connect_text"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp">
            <android.support.v7.widget.CardView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:cardCornerRadius="4dp"
                android:id="@+id/about_facebook"
                app:cardBackgroundColor="@color/facebook_blue">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/facebook48"
                    android:contentDescription="@string/facebooklogo" />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:cardCornerRadius="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:id="@+id/about_twitter"
                app:cardBackgroundColor="@color/twitter_blue">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/twitter_48"
                    android:contentDescription="@string/twitter_logo" />
            </android.support.v7.widget.CardView>

        </LinearLayout>


        <TextView
            android:id="@+id/about_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_below="@+id/about_logo"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed"/>

    </RelativeLayout>
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:fabSize="normal"
        android:src="@android:drawable/ic_dialog_email"
        android:id="@+id/about_us_fab"/>
</android.support.design.widget.CoordinatorLayout>
